--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ body {
 .layout__wrap {
   width: min(30.5rem, 95%);
   display: grid;
-  gap: 3.2rem;
+  gap: 3rem;
   margin: 5rem auto;
 }
 
@@ -152,6 +152,7 @@ body {
   font-size: 2rem;
   font-weight: 600;
   line-height: 1.2;
+  z-index: 9;
 }
 
 .content__text--2 {
@@ -215,11 +216,11 @@ body {
   .layout__wrap {
     width: 64.7rem;
     margin: 8rem auto;
-    /* padding: 0; */
     grid-template-columns: repeat(2, minmax(30.75rem, 1fr));
     grid-template-areas: "daniel    daniel" "jonathan Jeanette" "patrick  patrick " "kira     kira ";
   }
   .wrap__content--1 {
+    position: relative;
     grid-area: daniel;
   }
   .wrap__content--2 {
@@ -233,6 +234,13 @@ body {
   }
   .wrap__content--5 {
     grid-area: kira;
+  }
+  .wrap__content--1 .content__img-quota {
+    display: inline-block;
+    position: absolute;
+    right: 6rem;
+    top: 0;
+    z-index: 0;
   }
 }
 @media (min-width: 1200px) {
